fdo#57929 Toggle absolute/relative of external reference

I don't know how to get ScDocument pointer of external file, so this
patch bypass file name and tab name to toggle only row/column reference

Change-Id: I318e59a1e3791728b3a8095ee8f987cc2ab6f224